# WiNes

./: .gitignore  CMakeLists.txt
src/: cartridge.c  cartridge.h  common.c  common.h  cpu.c  cpu.h  cpu_mem.c  main.c  mapper.c  mapper.h  mem.c  mem.h  platform.c  platform.h  popnes.c  ppu.c  ppu.h  wines.c
src/mappers/: mapper0_nrom.h
